checker/internal/algol60_parser/algol60v2_parser.go
// Code generated from Algol60V2.g4 by ANTLR 4.10.1. DO NOT EDIT.

package algol60_parser // Algol60V2
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type Algol60V2Parser struct {
	*antlr.BaseParser
}

var algol60v2ParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func algol60v2ParserInit() {
	staticData := &algol60v2ParserStaticData
	staticData.literalNames = []string{
		"", "';'", "','", "'['", "']'", "'('", "')'", "':'", "'-'", "'+'", "'\\u00D7'",
		"'\\u00F7'", "'\\u2283'", "'\\u2228'", "'\\u2227'", "'\\u00AC'", "'<'",
		"'\\u2264'", "'='", "'\\u2265'", "'>'", "'\\u2260'", "", "''BEGIN''",
		"''END''", "''IF''", "''THEN''", "''ELSE''", "''FOR''", "''DO''", "''STEP''",
		"''UNTIL''", "''WHILE''", "''PROCEDURE''", "''INTEGER''", "''ARRAY''",
		"''STRING''",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "ASSIGN", "BEGIN", "END", "IF", "THEN", "ELSE",
		"FOR", "DO", "STEP", "UNTIL", "WHILE", "PROCEDURE", "INTEGER", "ARRAY",
		"STRING", "COMMENT", "QUOTED_STRING", "NUMBER", "IDENTIFIER", "SKIP_WS",
	}
	staticData.ruleNames = []string{
		"program", "block", "block_contents", "declaration", "type_declaration",
		"array_declaration", "array_segment", "string_declaration", "string_segment",
		"procedure_declaration", "formal_parameter_list", "parameter_delimiter",
		"statement", "unconditional_statement", "assignment_statement", "left_part",
		"procedure_statement", "actual_parameter_list", "conditional_statement",
		"for_statement", "for_list", "for_list_element", "expression", "simple_expression",
		"term", "factor", "function_designator", "boolean_expression", "implication",
		"boolean_term", "boolean_factor", "boolean_secondary", "boolean_primary",
		"subscripted_variable", "identifier", "number",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// Algol60V2ParserInit initializes any static state used to implement Algol60V2Parser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAlgol60V2Parser(). You can call this function if you wish to initialize the static state ahead
// of time.
func Algol60V2ParserInit() {
	staticData := &algol60v2ParserStaticData
	staticData.once.Do(algol60v2ParserInit)
}

// NewAlgol60V2Parser produces a new parser instance for the optional input antlr.TokenStream.
func NewAlgol60V2Parser(input antlr.TokenStream) *Algol60V2Parser {
	Algol60V2ParserInit()
	this := new(Algol60V2Parser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &algol60v2ParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Algol60V2.g4"

	return this
}

// Algol60V2Parser tokens.
const (
	Algol60V2ParserEOF           = antlr.TokenEOF
	Algol60V2ParserT__0          = 1
	Algol60V2ParserT__1          = 2
	Algol60V2ParserT__2          = 3
	Algol60V2ParserT__3          = 4
	Algol60V2ParserT__4          = 5
	Algol60V2ParserT__5          = 6
	Algol60V2ParserT__6          = 7
	Algol60V2ParserT__7          = 8
	Algol60V2ParserT__8          = 9
	Algol60V2ParserT__9          = 10
	Algol60V2ParserT__10         = 11
	Algol60V2ParserT__11         = 12
	Algol60V2ParserT__12         = 13
	Algol60V2ParserT__13         = 14
	Algol60V2ParserT__14         = 15
	Algol60V2ParserT__15         = 16
	Algol60V2ParserT__16         = 17
	Algol60V2ParserT__17         = 18
	Algol60V2ParserT__18         = 19
	Algol60V2ParserT__19         = 20
	Algol60V2ParserT__20         = 21
	Algol60V2ParserASSIGN        = 22
	Algol60V2ParserBEGIN         = 23
	Algol60V2ParserEND           = 24
	Algol60V2ParserIF            = 25
	Algol60V2ParserTHEN          = 26
	Algol60V2ParserELSE          = 27
	Algol60V2ParserFOR           = 28
	Algol60V2ParserDO            = 29
	Algol60V2ParserSTEP          = 30
	Algol60V2ParserUNTIL         = 31
	Algol60V2ParserWHILE         = 32
	Algol60V2ParserPROCEDURE     = 33
	Algol60V2ParserINTEGER       = 34
	Algol60V2ParserARRAY         = 35
	Algol60V2ParserSTRING        = 36
	Algol60V2ParserCOMMENT       = 37
	Algol60V2ParserQUOTED_STRING = 38
	Algol60V2ParserNUMBER        = 39
	Algol60V2ParserIDENTIFIER    = 40
	Algol60V2ParserSKIP_WS       = 41
)

// Algol60V2Parser rules.
const (
	Algol60V2ParserRULE_program                 = 0
	Algol60V2ParserRULE_block                   = 1
	Algol60V2ParserRULE_block_contents          = 2
	Algol60V2ParserRULE_declaration             = 3
	Algol60V2ParserRULE_type_declaration        = 4
	Algol60V2ParserRULE_array_declaration       = 5
	Algol60V2ParserRULE_array_segment           = 6
	Algol60V2ParserRULE_string_declaration      = 7
	Algol60V2ParserRULE_string_segment          = 8
	Algol60V2ParserRULE_procedure_declaration   = 9
	Algol60V2ParserRULE_formal_parameter_list   = 10
	Algol60V2ParserRULE_parameter_delimiter     = 11
	Algol60V2ParserRULE_statement               = 12
	Algol60V2ParserRULE_unconditional_statement = 13
	Algol60V2ParserRULE_assignment_statement    = 14
	Algol60V2ParserRULE_left_part               = 15
	Algol60V2ParserRULE_procedure_statement     = 16
	Algol60V2ParserRULE_actual_parameter_list   = 17
	Algol60V2ParserRULE_conditional_statement   = 18
	Algol60V2ParserRULE_for_statement           = 19
	Algol60V2ParserRULE_for_list                = 20
	Algol60V2ParserRULE_for_list_element        = 21
	Algol60V2ParserRULE_expression              = 22
	Algol60V2ParserRULE_simple_expression       = 23
	Algol60V2ParserRULE_term                    = 24
	Algol60V2ParserRULE_factor                  = 25
	Algol60V2ParserRULE_function_designator     = 26
	Algol60V2ParserRULE_boolean_expression      = 27
	Algol60V2ParserRULE_implication             = 28
	Algol60V2ParserRULE_boolean_term            = 29
	Algol60V2ParserRULE_boolean_factor          = 30
	Algol60V2ParserRULE_boolean_secondary       = 31
	Algol60V2ParserRULE_boolean_primary         = 32
	Algol60V2ParserRULE_subscripted_variable    = 33
	Algol60V2ParserRULE_identifier              = 34
	Algol60V2ParserRULE_number                  = 35
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Algol60V2ParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Algol60V2ParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(Algol60V2ParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Algol60V2Visitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Algol60V2Parser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, Algol60V2ParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Block()
	}
	{
		p.SetState(73)
		p.Match(Algol60V2ParserEOF)
	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Algol60V2ParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Algol60V2ParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) BEGIN() antlr.TerminalNode {
	return s.GetToken(Algol60V2ParserBEGIN, 0)
}

func (s *BlockContext) Block_contents() IBlock_contentsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlock_contentsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlock_contentsContext)
}

func (s *BlockContext) END() antlr.TerminalNode {
	return s.GetToken(Algol60V2ParserEND, 0)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Algol60V2Visitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Algol60V2Parser) Block() (localctx IBlockContext) {
	this := p
	_ = this

	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, Algol60V2ParserRULE_block)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(Algol60V2ParserBEGIN)
	}
	{
		p.SetState(76)
		p.Block_contents()
	}
	{
		p.SetState(77)
		p.Match(Algol60V2ParserEND)
	}

	return localctx
}

// IBlock_contentsContext is an interface to support dynamic dispatch.
type IBlock_contentsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_declaration returns the _declaration rule contexts.
	Get_declaration() IDeclarationContext

	// Get_statement returns the _statement rule contexts.
	Get_statement() IStatementContext

	// Set_declaration sets the _declaration rule contexts.
	Set_declaration(IDeclarationContext)

	// Set_statement sets the _statement rule contexts.
	Set_statement(IStatementContext)

	// GetDecls returns the decls rule context list.
	GetDecls() []IDeclarationContext

	// GetStmts returns the stmts rule context list.
	GetStmts() []IStatementContext

	// SetDecls sets the decls rule context list.
	SetDecls([]IDeclarationContext)

	// SetStmts sets the stmts rule context list.
	SetStmts([]IStatementContext)

	// IsBlock_contentsContext differentiates from other interfaces.
	IsBlock_contentsContext()
}

type Block_contentsContext struct {
	*antlr.BaseParserRuleContext
	parser       antlr.Parser
	_declaration IDeclarationContext
	decls        []IDeclarationContext
	_statement   IStatementContext
	stmts        []IStatementContext
}

func NewEmptyBlock_contentsContext() *Block_contentsContext {
	var p = new(Block_contentsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Algol60V2ParserRULE_block_contents
	return p
}

func (*Block_contentsContext) IsBlock_contentsContext() {}

func NewBlock_contentsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Block_contentsContext {
	var p = new(Block_contentsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Algol60V2ParserRULE_block_contents

	return p
}

func (s *Block_contentsContext) GetParser() antlr.Parser { return s.parser }

func (s *Block_contentsContext) Get_declaration() IDeclarationContext { return s._declaration }

func (s *Block_contentsContext) Get_statement() IStatementContext { return s._statement }

func (s *Block_contentsContext) Set_declaration(v IDeclarationContext) { s._declaration = v }

func (s *Block_contentsContext) Set_statement(v IStatementContext) { s._statement = v }

func (s *Block_contentsContext) GetDecls() []IDeclarationContext { return s.decls }

func (s *Block_contentsContext) GetStmts() []IStatementContext { return s.stmts }

func (s *Block_contentsContext) SetDecls(v []IDeclarationContext) { s.decls = v }

func (s *Block_contentsContext) SetStmts(v []IStatementContext) { s.stmts = v }

func (s *Block_contentsContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *Block_contentsContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *Block_contentsContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *Block_contentsContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *Block_contentsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Block_contentsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Block_contentsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Algol60V2Visitor:
		return t.VisitBlock_contents(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Algol60V2Parser) Block_contents() (localctx IBlock_contentsContext) {
	this := p
	_ = this

	localctx = NewBlock_contentsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, Algol60V2ParserRULE_block_contents)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(79)

				var _x = p.Declaration()

				localctx.(*Block_contentsContext)._declaration = _x
			}
			localctx.(*Block_contentsContext).decls = append(localctx.(*Block_contentsContext).decls, localctx.(*Block_contentsContext)._declaration)
			{
				p.SetState(80)
				p.Match(Algol60V2ParserT__0)
			}

		}
		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(90)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(87)
				p.Match(Algol60V2ParserT__0)
			}

		}
		p.SetState(92)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(94)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la-23)&-(0x1f+1)) == 0 && ((1<<uint((_la-23)))&((1<<(Algol60V2ParserBEGIN-23))|(1<<(Algol60V2ParserIF-23))|(1<<(Algol60V2ParserFOR-23))|(1<<(Algol60V2ParserCOMMENT-23))|(1<<(Algol60V2ParserIDENTIFIER-23)))) != 0 {
		{
			p.SetState(93)

			var _x = p.Statement()

			localctx.(*Block_contentsContext)._statement = _x
		}
		localctx.(*Block_contentsContext).stmts = append(localctx.(*Block_contentsContext).stmts, localctx.(*Block_contentsContext)._statement)

	}
	p.SetState(99)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(96)
				p.Match(Algol60V2ParserT__0)
			}

		}
		p.SetState(101)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}
	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(102)
				p.Match(Algol60V2ParserT__0)
			}
			{
				p.SetState(103)

				var _x = p.Statement()

				localctx.(*Block_contentsContext)._statement = _x
			}
			localctx.(*Block_contentsContext).stmts = append(localctx.(*Block_contentsContext).stmts, localctx.(*Block_contentsContext)._statement)

		}
		p.SetState(108)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}
	p.SetState(112)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == Algol60V2ParserT__0 {
		{
			p.SetState(109)
			p.Match(Algol60V2ParserT__0)
		}

		p.SetState(114)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Algol60V2ParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Algol60V2ParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) Type_declaration() IType_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_declarationContext)
}

func (s *DeclarationContext) Array_declaration() IArray_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArray_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArray_declarationContext)
}

func (s *DeclarationContext) String_declaration() IString_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IString_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IString_declarationContext)
}

func (s *DeclarationContext) Procedure_declaration() IProcedure_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProcedure_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProcedure_declarationContext)
}

func (s *DeclarationContext) COMMENT() antlr.TerminalNode {
	return s.GetToken(Algol60V2ParserCOMMENT, 0)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Algol60V2Visitor:
		return t.VisitDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Algol60V2Parser) Declaration() (localctx IDeclarationContext) {
	this := p
	_ = this

	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, Algol60V2ParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(120)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(115)
			p.Type_declaration()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(116)
			p.Array_declaration()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(117)
			p.String_declaration()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(118)
			p.Procedure_declaration()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(119)
			p.Match(Algol60V2ParserCOMMENT)
		}

	}

	return localctx
}

// IType_declarationContext is an interface to support dynamic dispatch.
type IType_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_identifier returns the _identifier rule contexts.
	Get_identifier() IIdentifierContext

	// Set_identifier sets the _identifier rule contexts.
	Set_identifier(IIdentifierContext)

	// GetVars returns the vars rule context list.
	GetVars() []IIdentifierContext

	// SetVars sets the vars rule context list.
	SetVars([]IIdentifierContext)

	// IsType_declarationContext differentiates from other interfaces.
	IsType_declarationContext()
}

type Type_declarationContext struct {
	*antlr.BaseParserRuleContext
	parser      antlr.Parser
	_identifier IIdentifierContext
	vars        []IIdentifierContext
}

func NewEmptyType_declarationContext() *Type_declarationContext {
	var p = new(Type_declarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Algol60V2ParserRULE_type_declaration
	return p
}

func (*Type_declarationContext) IsType_declarationContext() {}

func NewType_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Type_declarationContext {
	var p = new(Type_declarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Algol60V2ParserRULE_type_declaration

	return p
}

func (s *Type_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Type_declarationContext) Get_identifier() IIdentifierContext { return s._identifier }

func (s *Type_declarationContext) Set_identifier(v IIdentifierContext) { s._identifier = v }

func (s *Type_declarationContext) GetVars() []IIdentifierContext { return s.vars }

func (s *Type_declarationContext) SetVars(v []IIdentifierContext) { s.vars = v }

func (s *Type_declarationContext) INTEGER() antlr.TerminalNode {
	return s.GetToken(Algol60V2ParserINTEGER, 0)
}
